@@ -2,13 +2,11 @@ package org.deftserver.example;
 
 import java.util.Map;
 
-import org.deftserver.io.IOLoop;
 import org.deftserver.web.Application;
 import org.deftserver.web.HttpServer;
 import org.deftserver.web.handler.RequestHandler;
 import org.deftserver.web.http.HttpRequest;
 import org.deftserver.web.http.HttpResponse;
-import org.deftserver.web.http.HttpServerDescriptor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -42,14 +40,16 @@ public class DeftServerExample {
 		Application application = new Application(handlers);
 		application.setStaticContentDir("static");
 		
-		HttpServerDescriptor.KEEP_ALIVE_TIMEOUT = 30 * 1000;	// 30s  
-		HttpServerDescriptor.READ_BUFFER_SIZE = 1500;			// 1500 bytes 
-		HttpServerDescriptor.WRITE_BUFFER_SIZE = 1500;			// 1500 bytes 
+//		HttpServerDescriptor.KEEP_ALIVE_TIMEOUT = 30 * 1000;	// 30s  
+//		HttpServerDescriptor.READ_BUFFER_SIZE = 1500;			// 1500 bytes 
+//		HttpServerDescriptor.WRITE_BUFFER_SIZE = 1500;			// 1500 bytes 
 		
 
 		logger.debug("Starting up server on port: " + PORT);
 		HttpServer server = new HttpServer(application);
-		server.listen(PORT);
-		IOLoop.INSTANCE.start();
+		//server.listen(PORT);
+		server.bind(PORT);
+		server.start(8);
+		//IOLoop.INSTANCE.start();
 	}
 }
