@@ -10,10 +10,14 @@ public class Closeables {
 	private Closeables() {}
 
 	public static void closeQuietly(SelectableChannel channel) {
+		closeQuietly(IOLoop.INSTANCE, channel);
+	}
+	
+	public static void closeQuietly(IOLoop ioLoop, SelectableChannel channel) {
 		try {
-			IOLoop.INSTANCE.removeHandler(channel);
+			ioLoop.removeHandler(channel);
 			com.google.common.io.Closeables.close(channel, true);
 		} catch (IOException ignore) { }
 	}
-
+	
 }
